--- a/LAB_5/vaccum_cleaner.ipynb
+++ b/LAB_5/vaccum_cleaner.ipynb
@@ -17,155 +17,319 @@
   "cells": [
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "WyNXGj2AGXYT"
-      },
-      "source": [
-        "#INSTRUCTIONS\n",
-        "#Enter LOCATION A/B in captial letters\n",
-        "#Enter Status O/1 accordingly where 0 means CLEAN and 1 means DIRTY\n",
-        "\n",
-        "def vacuum_world():\n",
-        "        # initializing goal_state\n",
-        "        # 0 indicates Clean and 1 indicates Dirty\n",
-        "    goal_state = {'A': '0', 'B': '0'}\n",
-        "    cost = 0\n",
-        "\n",
-        "    location_input = input(\"Enter Location of Vacuum \\t\") #user_input of location vacuum is placed\n",
-        "    status_input = input(\"Enter status of\"+\" \" + location_input + \"\\t\") #user_input if location is dirty or clean\n",
-        "    status_input_complement = input(\"Enter status of other room \\t\")\n",
-        "    initial_state = {'A' : status_input , 'B' : status_input_complement}\n",
-        "    print(\"Initial Location Condition\" + str(initial_state))\n",
-        "\n",
-        "    if location_input == 'A':\n",
-        "        # Location A is Dirty.\n",
-        "        print(\"Vacuum is placed in Location A\")\n",
-        "        if status_input == '1':\n",
-        "            print(\"Location A is Dirty.\")\n",
-        "            # suck the dirt  and mark it as clean\n",
-        "            goal_state['A'] = '0'\n",
-        "            cost += 1                      #cost for suck\n",
-        "            print(\"Cost for CLEANING A \" + str(cost))\n",
-        "            print(\"Location A has been Cleaned.\")\n",
-        "\n",
-        "            if status_input_complement == '1':\n",
-        "                # if B is Dirty\n",
-        "                print(\"Location B is Dirty.\")\n",
-        "                print(\"Moving right to the Location B. \")\n",
-        "                cost += 1                       #cost for moving right\n",
-        "                print(\"COST for moving RIGHT\" + str(cost))\n",
-        "                # suck the dirt and mark it as clean\n",
-        "                goal_state['B'] = '0'\n",
-        "                cost += 1                       #cost for suck\n",
-        "                print(\"COST for SUCK \" + str(cost))\n",
-        "                print(\"Location B has been Cleaned. \")\n",
-        "            else:\n",
-        "                print(\"No action\" + str(cost))\n",
-        "                # suck and mark clean\n",
-        "                print(\"Location B is already clean.\")\n",
-        "\n",
-        "        if status_input == '0':\n",
-        "            print(\"Location A is already clean \")\n",
-        "            if status_input_complement == '1':# if B is Dirty\n",
-        "                print(\"Location B is Dirty.\")\n",
-        "                print(\"Moving RIGHT to the Location B. \")\n",
-        "                cost += 1                       #cost for moving right\n",
-        "                print(\"COST for moving RIGHT \" + str(cost))\n",
-        "                # suck the dirt and mark it as clean\n",
-        "                goal_state['B'] = '0'\n",
-        "                cost += 1                       #cost for suck\n",
-        "                print(\"Cost for SUCK\" + str(cost))\n",
-        "                print(\"Location B has been Cleaned. \")\n",
-        "            else:\n",
-        "                print(\"No action \" + str(cost))\n",
-        "                print(cost)\n",
-        "                # suck and mark clean\n",
-        "                print(\"Location B is already clean.\")\n",
-        "\n",
-        "    else:\n",
-        "        print(\"Vacuum is placed in location B\")\n",
-        "        # Location B is Dirty.\n",
-        "        if status_input == '1':\n",
-        "            print(\"Location B is Dirty.\")\n",
-        "            # suck the dirt  and mark it as clean\n",
-        "            goal_state['B'] = '0'\n",
-        "            cost += 1  # cost for suck\n",
-        "            print(\"COST for CLEANING \" + str(cost))\n",
-        "            print(\"Location B has been Cleaned.\")\n",
-        "\n",
-        "            if status_input_complement == '1':\n",
-        "                # if A is Dirty\n",
-        "                print(\"Location A is Dirty.\")\n",
-        "                print(\"Moving LEFT to the Location A. \")\n",
-        "                cost += 1  # cost for moving right\n",
-        "                print(\"COST for moving LEFT\" + str(cost))\n",
-        "                # suck the dirt and mark it as clean\n",
-        "                goal_state['A'] = '0'\n",
-        "                cost += 1  # cost for suck\n",
-        "                print(\"COST for SUCK \" + str(cost))\n",
-        "                print(\"Location A has been Cleaned.\")\n",
-        "\n",
-        "        else:\n",
-        "            print(cost)\n",
-        "            # suck and mark clean\n",
-        "            print(\"Location B is already clean.\")\n",
-        "\n",
-        "            if status_input_complement == '1':  # if A is Dirty\n",
-        "                print(\"Location A is Dirty.\")\n",
-        "                print(\"Moving LEFT to the Location A. \")\n",
-        "                cost += 1  # cost for moving right\n",
-        "                print(\"COST for moving LEFT \" + str(cost))\n",
-        "                # suck the dirt and mark it as clean\n",
-        "                goal_state['A'] = '0'\n",
-        "                cost += 1  # cost for suck\n",
-        "                print(\"Cost for SUCK \" + str(cost))\n",
-        "                print(\"Location A has been Cleaned. \")\n",
-        "            else:\n",
-        "                print(\"No action \" + str(cost))\n",
-        "                # suck and mark clean\n",
-        "                print(\"Location A is already clean.\")\n",
-        "\n",
-        "    # done cleaning\n",
-        "    print(\"GOAL STATE: \")\n",
-        "    print(goal_state)\n",
-        "    print(\"Performance Measurement: \" + str(cost))\n",
-        "\n",
-        "\n"
-      ],
       "execution_count": 1,
+      "metadata": {
+        "id": "ZfdzvDhkAQ86"
+      },
+      "outputs": [],
+      "source": [
+        "def clean(floor):\n",
+        "    row = len(floor)\n",
+        "    col = len(floor[0])\n",
+        "    for i in range(0, row):\n",
+        "        if(i%2 == 0):\n",
+        "            for j in range(0, col):\n",
+        "                if(floor[i][j] == 1):\n",
+        "                    floor[i][j] = 0\n",
+        "                print_floor(floor, i, j)\n",
+        "        else:\n",
+        "            for j in range(col-1, -1, -1):\n",
+        "                if(floor[i][j] == 1):\n",
+        "                    floor[i][j] = 0\n",
+        "                print_floor(floor, i, j)\n",
+        "                "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_floor(floor, row, col):\n",
+        "    for i in range(0, len(floor)):\n",
+        "        for j in range(0, len(floor[0])):\n",
+        "            if(i == row and j == col):\n",
+        "                print(f\"|{floor[i][j]}|\", end=\" \")\n",
+        "            else:\n",
+        "                print(f\" {floor[i][j]} \", end=\" \")\n",
+        "        print(end='\\n')\n",
+        "    print(end='\\n')\n",
+        "            \n",
+        "    "
+      ],
+      "metadata": {
+        "id": "_hRp6-f2AWNZ"
+      },
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "    print(\"Enter no. of rows\")\n",
+        "    m = int(input())\n",
+        "    print(\"Enter no.of columns\")\n",
+        "    n = int(input())\n",
+        "    floor = []\n",
+        "    for i in range(0, m):\n",
+        "        a = list(map(int, input().split(\" \")))\n",
+        "        floor.append(a)\n",
+        "    print()\n",
+        "    clean(floor)\n",
+        "       "
+      ],
+      "metadata": {
+        "id": "JYYv_lHnAbp_"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test 1\n",
+        "main()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Am7jsYqJGo4f",
-        "outputId": "e3197a59-75f1-4d6d-9b22-72492eed2aa5"
+        "id": "_EmYNt73Ac_I",
+        "outputId": "42f96dc4-b248-4e49-dd42-21e1d0a68080"
       },
-      "source": [
-        "vacuum_world()"
-      ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter Location of Vacuum \tA\n",
-            "Enter status of A\t1\n",
-            "Enter status of other room \t0\n",
-            "Initial Location Condition{'A': '1', 'B': '0'}\n",
-            "Vacuum is placed in Location A\n",
-            "Location A is Dirty.\n",
-            "Cost for CLEANING A 1\n",
-            "Location A has been Cleaned.\n",
-            "No action1\n",
-            "Location B is already clean.\n",
-            "GOAL STATE: \n",
-            "{'A': '0', 'B': '0'}\n",
-            "Performance Measurement: 1\n"
+            "Enter no. of rows\n",
+            "3\n",
+            "Enter no.of columns\n",
+            "4\n",
+            "1 0 0 0\n",
+            "0 1 0 1\n",
+            "1 0 1 1\n",
+            "\n",
+            "|0|  0   0   0  \n",
+            " 0   1   0   1  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0  |0|  0   0  \n",
+            " 0   1   0   1  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0  |0|  0  \n",
+            " 0   1   0   1  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0   0  |0| \n",
+            " 0   1   0   1  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0   1   0  |0| \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0   1  |0|  0  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0  |0|  0   0  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            "|0|  0   0   0  \n",
+            " 1   0   1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0   0   0   0  \n",
+            "|0|  0   1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0   0   0   0  \n",
+            " 0  |0|  1   1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0   0   0   0  \n",
+            " 0   0  |0|  1  \n",
+            "\n",
+            " 0   0   0   0  \n",
+            " 0   0   0   0  \n",
+            " 0   0   0  |0| \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test 2\n",
+        "main()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G21-TovgA7Lv",
+        "outputId": "6adf15c2-7dbb-4a48-b5f6-67931372dae7"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter no. of rows\n",
+            "4 \n",
+            "Enter no.of columns\n",
+            "7\n",
+            "1 1 0 0 1 0 0\n",
+            "0 0 0 1 0 0 0\n",
+            "0 1 1 1 1 1 1\n",
+            "0 1 0 1 0 1 0\n",
+            "\n",
+            "|0|  1   0   0   1   0   0  \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0  |0|  0   0   1   0   0  \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0  |0|  0   1   0   0  \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0  |0|  1   0   0  \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0  |0|  0   0  \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0  |0|  0  \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0  |0| \n",
+            " 0   0   0   1   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   1   0   0  |0| \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   1   0  |0|  0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   1  |0|  0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0  |0|  0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0  |0|  0   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0  |0|  0   0   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            "|0|  0   0   0   0   0   0  \n",
+            " 0   1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            "|0|  1   1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0  |0|  1   1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0  |0|  1   1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0  |0|  1   1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0  |0|  1   1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0  |0|  1  \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0  |0| \n",
+            " 0   1   0   1   0   1   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   1   0   1   0   1  |0| \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   1   0   1   0  |0|  0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   1   0   1  |0|  0   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   1   0  |0|  0   0   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   1  |0|  0   0   0   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0  |0|  0   0   0   0   0  \n",
+            "\n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            " 0   0   0   0   0   0   0  \n",
+            "|0|  0   0   0   0   0   0  \n",
+            "\n"
           ]
         }
       ]
